apps/arr/bazarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: arr
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: bazarr
      app: bazarr
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bazarr
        app: bazarr
    spec:
      containers:
        - name: bazarr
          image: linuxserver/bazarr:1.4.3
          ports:
            - name: bazarr
              containerPort: 6767
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /media
              name: media
            - mountPath: /data/movies
              name: movies
            - mountPath: /data/series
              name: series
            - mountPath: /data/anime
              name: anime
      volumes:
        - name: config
          hostPath:
            path: /var/mnt/data/persistence/arr/bazarr
            type: DirectoryOrCreate
        - name: media
          hostPath:
            path: /var/mnt/data/media
            type: DirectoryOrCreate
        - name: movies
          hostPath:
            path: /var/disk/a/media/video/movies
            type: DirectoryOrCreate
        - name: series
          hostPath:
            path: /var/disk/a/media/video/series
            type: DirectoryOrCreate
        - name: anime
          hostPath:
            path: /var/disk/a/media/video/anime
            type: DirectoryOrCreate
