apps/arr/bazarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr-service
  namespace: arr
  labels:
    app: bazarr
spec:
  ports:
    - port: 6767
      targetPort: bazarr
      name: bazarr
  selector:
    app: bazarr
